build/log/idf_py_stdout_output_72548
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/akame/Documents/ISOSPI_TEST/build/bootloader/esp-idf/esptool_py && /Users/akame/.espressif/python_env/idf5.4_py3.9_env/bin/python /Users/akame/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /Users/akame/Documents/ISOSPI_TEST/build/bootloader/bootloader.bin
Bootloader binary size 0x5220 bytes. 0x2de0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/akame/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/akame/Documents/ISOSPI_TEST/build/config -I/Users/akame/esp/esp-idf/components/newlib/platform_include -I/Users/akame/esp/esp-idf/components/freertos/config/include -I/Users/akame/esp/esp-idf/components/freertos/config/include/freertos -I/Users/akame/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/akame/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/akame/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/akame/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/akame/esp/esp-idf/components/freertos/esp_additions/include -I/Users/akame/esp/esp-idf/components/esp_hw_support/include -I/Users/akame/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/akame/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/Users/akame/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/akame/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/akame/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/akame/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/Users/akame/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/Users/akame/esp/esp-idf/components/heap/include -I/Users/akame/esp/esp-idf/components/heap/tlsf -I/Users/akame/esp/esp-idf/components/log/include -I/Users/akame/esp/esp-idf/components/soc/include -I/Users/akame/esp/esp-idf/components/soc/esp32s3 -I/Users/akame/esp/esp-idf/components/soc/esp32s3/include -I/Users/akame/esp/esp-idf/components/soc/esp32s3/register -I/Users/akame/esp/esp-idf/components/hal/platform_port/include -I/Users/akame/esp/esp-idf/components/hal/esp32s3/include -I/Users/akame/esp/esp-idf/components/hal/include -I/Users/akame/esp/esp-idf/components/esp_rom/include -I/Users/akame/esp/esp-idf/components/esp_rom/esp32s3/include -I/Users/akame/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/Users/akame/esp/esp-idf/components/esp_rom/esp32s3 -I/Users/akame/esp/esp-idf/components/esp_common/include -I/Users/akame/esp/esp-idf/components/esp_system/include -I/Users/akame/esp/esp-idf/components/esp_system/port/soc -I/Users/akame/esp/esp-idf/components/esp_system/port/include/private -I/Users/akame/esp/esp-idf/components/xtensa/esp32s3/include -I/Users/akame/esp/esp-idf/components/xtensa/include -I/Users/akame/esp/esp-idf/components/xtensa/deprecated_include -I/Users/akame/esp/esp-idf/components/lwip/include -I/Users/akame/esp/esp-idf/components/lwip/include/apps -I/Users/akame/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/akame/esp/esp-idf/components/lwip/lwip/src/include -I/Users/akame/esp/esp-idf/components/lwip/port/include -I/Users/akame/esp/esp-idf/components/lwip/port/freertos/include -I/Users/akame/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/akame/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/akame/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/akame/esp/esp-idf/components/driver/deprecated -I/Users/akame/esp/esp-idf/components/driver/i2c/include -I/Users/akame/esp/esp-idf/components/driver/touch_sensor/include -I/Users/akame/esp/esp-idf/components/driver/twai/include -I/Users/akame/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/Users/akame/esp/esp-idf/components/esp_pm/include -I/Users/akame/esp/esp-idf/components/esp_ringbuf/include -I/Users/akame/esp/esp-idf/components/esp_driver_gpio/include -I/Users/akame/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/akame/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/akame/esp/esp-idf/components/esp_driver_spi/include -I/Users/akame/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/akame/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/akame/esp/esp-idf/components/esp_driver_i2s/include -I/Users/akame/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/akame/esp/esp-idf/components/sdmmc/include -I/Users/akame/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/akame/esp/esp-idf/components/esp_driver_sdio/include -I/Users/akame/esp/esp-idf/components/esp_driver_dac/include -I/Users/akame/esp/esp-idf/components/esp_driver_rmt/include -I/Users/akame/esp/esp-idf/components/esp_driver_tsens/include -I/Users/akame/esp/esp-idf/components/esp_driver_sdm/include -I/Users/akame/esp/esp-idf/components/esp_driver_i2c/include -I/Users/akame/esp/esp-idf/components/esp_driver_uart/include -I/Users/akame/esp/esp-idf/components/vfs/include -I/Users/akame/esp/esp-idf/components/esp_driver_ledc/include -I/Users/akame/esp/esp-idf/components/esp_driver_parlio/include -I/Users/akame/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/akame/Documents/ISOSPI_TEST=. -fmacro-prefix-map=/Users/akame/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/akame/Documents/ISOSPI_TEST/main/main.c
/Users/akame/Documents/ISOSPI_TEST/main/main.c: In function 'verify_data_integrity':
/Users/akame/Documents/ISOSPI_TEST/main/main.c:220:52: warning: passing argument 1 of 'adbms6830_calc_pec15' discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
  220 |     uint16_t calculated_pec = adbms6830_calc_pec15(rx_data_start, len);
      |                                                    ^~~~~~~~~~~~~
/Users/akame/Documents/ISOSPI_TEST/main/main.c:78:47: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   78 | static uint16_t adbms6830_calc_pec15(uint8_t *data, int len) {
      |                                      ~~~~~~~~~^~~~
/Users/akame/Documents/ISOSPI_TEST/main/main.c: In function 'adbms6830_test_isospi_communication':
/Users/akame/Documents/ISOSPI_TEST/main/main.c:244:26: error: 'tx_data' undeclared (first use in this function)
  244 |     generate_random_data(tx_data, DATA_LEN);
      |                          ^~~~~~~
/Users/akame/Documents/ISOSPI_TEST/main/main.c:244:26: note: each undeclared identifier is reported only once for each function it appears in
/Users/akame/Documents/ISOSPI_TEST/main/main.c:304:1: error: control reaches end of non-void function [-Werror=return-type]
  304 | }
      | ^
/Users/akame/Documents/ISOSPI_TEST/main/main.c: At top level:
/Users/akame/Documents/ISOSPI_TEST/main/main.c:195:13: warning: 'generate_test_pattern' defined but not used [-Wunused-function]
  195 | static void generate_test_pattern(uint8_t *buffer, size_t len) {
      |             ^~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
